<resources>
    <string name="app_name">Primeira Oportunidade</string>
    <string name="forgot_password_text">Esqueceu sua senha?</string>
    <string name="create_account_text">Primeiro acesso? Crie uma conta</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Senha</string>
    <string name="login_button">Entrar</string>
    <string name="create_user_account">Sou candidato</string>
    <string name="create_company_account">Sou empresa</string>
    <string name="reset_password_title">Redefinir Senha</string>
    <string name="reset_password_text">Para redefinir sua senha, preencha o campo abaixo com o email cadastrado e enviaremos um link com as instruções para redefinir sua senha</string>
    <string name="reset_password_button">Enviar Link</string>
    <string name="name_label">Nome*</string>
    <string name="company_name">Nome da empresa*</string>
    <string name="corporative_email">Email corporativo*</string>
    <string name="phone_number_label">Telefone*</string>
    <string name="cpf_label">CPF*</string>
    <string name="email_label">E-mail*</string>
    <string name="password_label">Senha*</string>
    <string name="confirm_password_label">Confirme sua senha*</string>
    <string name="register_button_text">Cadastrar</string>
    <string name="have_account">Já possui conta? <font color="#FF7B2A">Login</font></string>
    <string name="company_name_label">Nome da empresa*</string>
    <string name="cnpj_label">CNPJ*</string>
    <string name="segment_label">Segmento de Atividade*</string>
    <string name="responsible_label">Responsável pela abertura das vagas*</string>
    <string name="website_label">Site</string>
    <string name="city_label">Cidade*</string>
    <string name="cep_label">CEP*</string>
    <string name="uf_label">Estado*</string>
    <string name="address_label">Endereço*</string>
    <string name="address_number_label">Nº*</string>
    <string name="logo_label">Logo*</string>
    <string name="exit_menu_option">Sair</string>
    <string name="profile_menu_option">Perfil</string>
    <string name="home_menu_option">Início</string>
    <string name="comunity_menu_option">Comunidade</string>
    <string name="companies_menu_option">Empresas</string>
    <string name="my_applications_menu_option">Minhas Candidaturas</string>
    <string name="search">Pesquisar</string>
    <string name="your_profile">Seu perfil</string>
    <string name="vacancy_register_menu">Cadastrar Vaga</string>
    <string name="vacancy_register_title">Cadastro de Vaga</string>
    <string name="vacancy_name">Nome do Cargo*</string>
    <string name="vacancy_level">Nível da Vaga*</string>
    <string name="locality">Localidade*</string>
    <string name="salary">Salário*</string>
    <string name="contact">Contato*</string>
    <string name="modality">Modalidade*</string>
    <string name="about_company">Sobra a Empresa*</string>
    <string name="description">Descrição da Vaga*</string>
    <string name="requirements">Requisitos da Vaga*</string>
    <string name="benefits">Benefícios Oferecidos*</string>
    <string name="add_adictional_questions">Incluir perguntas adicionais</string>
    <string name="add_more_questions">Adicionar mais uma pergunta</string>
    <string name="finish_register">Finalizar cadastro</string>
    <string name="adictional_questions_title">Perguntas Adicionais</string>
    <string name="register_curriculum">Cadastre seu currículo</string>
    <string name="back">Voltar</string>
    <string name="question">Pergunta</string>
    <string name="full_name">Nome Completo*</string>
    <string name="birth_date">Data de Nascimento*</string>
    <string name="age">Idade*</string>
    <string name="gender">Gênero*</string>
    <string name="race">Raça*</string>
    <string name="institution_name">Nome da Instituição de Ensino*</string>
    <string name="level">Nível*</string>
    <string name="period">Semestre*</string>
    <string name="start_date">Data Início*</string>
    <string name="end_date">Data Conclusão*</string>
    <string name="course_name">Nome do curso*</string>
    <string name="curriculum_register">Cadastro de Currículo</string>
    <string name="academic_data">Dados Acadêmicos</string>
    <string name="courses_competences">Cursos e Competências</string>
    <string name="additional_data">Dados Adicionais</string>
    <string name="studing_yet">estudo atualmente</string>
    <string name="dont_have_courses">não possuo cursos</string>
    <string name="complementary_course_name">Nome do Curso Complementar*</string>
    <string name="duration">Duração*</string>
    <string name="granting_institution">Instituição Concedente*</string>
    <string name="go_to_academic_data">Ir para dados acadêmicos</string>
    <string name="add_another_background">Adicionar outra formação</string>
    <string name="add_another_course">Adicionar outro curso</string>
    <string name="go_to_courses_and_competences">Ir para cursos e competências</string>
    <string name="go_to_additional_data">Ir para dados adicionais</string>
    <string name="insert_your_competences">Insira suas competências</string>
    <string name="add_curriculum">Possui seu currículo? Anexe-o aqui:</string>
    <string name="about_you">Fale sobre você:</string>
    <string name="interest_areas">Quais suas áreas de interesse?</string>
    <string name="use_terms">Termos de Uso</string>
    <string name="privacy_politic">Política de Privacidade</string>
    <string name="finish_curriculum">Cadastrar currículo</string>
    <string name="wellcome_community">Bem-vindo à Comunidade!</string>
    <string name="know_our_sections">Conheça nossas seções</string>
    <string name="tips_creating_curriculum">Dicas de Montagem de Currículo</string>
    <string name="see_more_informations">Ver mais informações</string>
    <string name="tips_of_courses">Dicas de Cursos</string>
    <string name="tips_to_enterviews">Dicas para Entrevistas</string>
    <string name="know_competences">Conheça as Competências</string>
    <string name="apply">Me candidatar</string>
    <string name="view_applications">Ver candidaturas</string>
    <string name="cancel_application">Cancelar candidatura</string>
    <string name="applications">Candidaturas</string>
    <string name="chat">Chat</string>
    <string name="chat_text">Seja bem-vindo ao nosso chat, aqui você pode se conectar com outros candidatos, tirar dúvidas e compartilhar experiências</string>
    <string-array name="gender_options">
        <item>Selecione</item>
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Não-binário</item>
        <item>Prefiro não dizer</item>
    </string-array>
    <string-array name="race_options">
        <item>Selecione</item>
        <item>Branco</item>
        <item>Negro</item>
        <item>Pardo</item>
        <item>Indígena</item>
        <item>Amarelo</item>
    </string-array>
    <string-array name="segment_options">
        <item>Selecione</item>
        <item>Agronegócio</item>
        <item>Alimentos e Bebidas</item>
        <item>Automotivo</item>
        <item>Comércio</item>
        <item>Construção Civil</item>
        <item>Educação</item>
        <item>Entretenimento</item>
        <item>Financeiro</item>
        <item>Indústria</item>
        <item>Logística</item>
        <item>Moda e Vestuário</item>
        <item>Saúde</item>
        <item>Serviços</item>
        <item>Tecnologia</item>
        <item>Turismo e Hotelaria</item>
        <item>Outro</item>
    </string-array>
    <string-array name="uf_options">
        <item>Selecione</item>
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
    <string-array name="modality_options">
        <item>Selecione</item>
        <item>Presencial</item>
        <item>Remoto</item>
        <item>Híbrido</item>
    </string-array>
    <string-array name="level_options">
        <item>Selecione</item>
        <item>Ensino Fundamental</item>
        <item>Ensino Médio</item>
        <item>Técnico</item>
        <item>Profissionalizante</item>
        <item>Tecnólogo</item>
        <item>Graduação</item>
    </string-array>
    <string-array name="period_options">
        <item>Selecione</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>
    <string-array name="course_modality_options">
        <item>Selecione</item>
        <item>Online</item>
        <item>Presencial</item>
        <item>Híbrido</item>
        <item>Bootcamp</item>
        <item>Imersivo</item>
        <item>Autoinstrucional</item>
    </string-array>
    <string-array name="interest_area_options">
        <item>Selecione</item>
        <item>Administração</item>
        <item>Atendimento ao Cliente</item>
        <item>Comercial e Vendas</item>
        <item>Comunicação e Marketing</item>
        <item>Design</item>
        <item>Educação</item>
        <item>Engenharia</item>
        <item>Financeiro</item>
        <item>Jurídico</item>
        <item>Logística</item>
        <item>Recursos Humanos</item>
        <item>Saúde</item>
        <item>Serviços Gerais</item>
        <item>Suporte Técnico</item>
        <item>Tecnologia da Informação</item>
        <item>Turismo e Hotelaria</item>
        <item>Outro</item>
    </string-array>
    <string-array name="vacancy_titles_options">
        <item>Selecione</item>
        <item>Assistente Administrativo</item>
        <item>Atendente</item>
        <item>Auxiliar de Escritório</item>
        <item>Auxiliar de Limpeza</item>
        <item>Auxiliar de Logística</item>
        <item>Auxiliar de Produção</item>
        <item>Balconista</item>
        <item>Caixa</item>
        <item>Consultor de Vendas</item>
        <item>Copeira</item>
        <item>Designer Gráfico</item>
        <item>Desenvolvedor Backend</item>
        <item>Desenvolvedor Frontend</item>
        <item>Desenvolvedor Fullstack</item>
        <item>Eletricista</item>
        <item>Estagiário em Administração</item>
        <item>Estagiário em Direito</item>
        <item>Estagiário em Marketing</item>
        <item>Garçom</item>
        <item>Jovem Aprendiz</item>
        <item>Mecânico</item>
        <item>Motoboy</item>
        <item>Operador de Caixa</item>
        <item>Operador de Telemarketing</item>
        <item>Recepcionista</item>
        <item>Recrutador</item>
        <item>Social Media</item>
        <item>Suporte Técnico</item>
        <item>Técnico em Informática</item>
        <item>Vendedor</item>
        <item>Zelador</item>
    </string-array>
    <string-array name="vacancy_level_options">
        <item>Selecione</item>
        <item>Estágio</item>
        <item>Aprendiz</item>
        <item>Júnior</item>
        <item>Pleno</item>
        <item>Sênior</item>
    </string-array>
    <string-array name="active_filter_options">
        <item>Selecione</item>
        <item>Ativas</item>
        <item>Inativas</item>
    </string-array>
    <string-array name="filled_filter_options">
        <item>Selecione</item>
        <item>Preenchidas</item>
        <item>Não preenchidas</item>
    </string-array>
</resources>