<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".VacancyRegister">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="41dp"
                android:layout_marginBottom="10dp"
                android:gravity="start|center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <ImageButton
                    android:id="@+id/back_button"
                    style="@style/BackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:onClick="onBackPressed"
                    android:src="@drawable/back_button" />

                <TextView
                    style="@style/RegisterTitle"
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/vacancy_register_title"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/EditTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vacancy_name"

                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <!-- CNPJ -->
                <EditText
                    android:id="@+id/vacancy_name_input"
                    style="@style/EditTextRegister"
                    android:inputType="text"
                    android:layout_gravity="center" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="189dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/EditTextLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vacancy_level" />

                    <EditText
                        android:id="@+id/level_input"
                        style="@style/EditTextRegister"
                        android:layout_width="177dp"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="192dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/EditTextLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/salary" />

                    <EditText
                        android:id="@+id/salary_input"
                        style="@style/EditTextRegister"
                        android:layout_width="148dp"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/EditTextLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city_label" />

                    <EditText
                        android:id="@+id/city_input"
                        style="@style/EditTextRegister"
                        android:layout_width="219dp"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="192dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/EditTextLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uf_label" />

                    <EditText
                        android:id="@+id/uf_input"
                        style="@style/EditTextRegister"
                        android:layout_width="109dp"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="176dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/EditTextLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact" />

                    <EditText
                        android:id="@+id/contact_input"
                        style="@style/EditTextRegister"
                        android:layout_width="162dp"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="192dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/EditTextLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modality" />

                    <EditText
                        android:id="@+id/modality_input"
                        style="@style/EditTextRegister"
                        android:inputType="text"
                        android:layout_width="166dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/EditTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_company" />

                <EditText
                    android:id="@+id/about_company_input"
                    style="@style/EditTextRegister"
                    android:layout_height="90dp"
                    android:gravity="top|start"
                    android:inputType="textMultiLine" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/EditTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/description_input"
                    style="@style/EditTextRegister"
                    android:gravity="top|start"
                    android:layout_height="90dp"
                    android:inputType="textMultiLine" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/EditTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/requirements" />

                <EditText
                    android:id="@+id/requirements_input"
                    style="@style/EditTextRegister"
                    android:layout_height="90dp"
                    android:gravity="top|start"
                    android:inputType="textMultiLine" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/EditTextLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/benefits" />

                    <EditText
                        android:id="@+id/benefits_input"
                        style="@style/EditTextRegister"
                        android:layout_height="90dp"
                        android:gravity="top|start"
                        android:inputType="textMultiLine" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_button2"
                    style="@style/ButtonOrange"
                    android:layout_width="271dp"
                    android:layout_height="37dp"
                    android:onClick="addQuestions"
                    android:text="@string/add_adictional_questions"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_button"
                    style="@style/ButtonBlue"
                    android:onClick="registerVacancy"
                    android:text="@string/register_button_text"
                    android:textAllCaps="false" />



            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

