<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.activities.ResetPassword">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/reset_password_text"
        >

        <ImageButton
            android:id="@+id/back_button"
            style="@style/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:onClick="onBackPressed"
            android:src="@drawable/back_button" />

    <TextView
        android:id="@+id/reset_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/reset_password_title"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        />
    </LinearLayout>
    
    <TextView
        android:id="@+id/reset_password_text"
        android:layout_width="350dp"
        android:textSize="16dp"
        android:text="@string/reset_password_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/email"
        android:layout_margin="20dp"
        android:textColor="@color/black"
          android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/email"
        style="@style/EditText"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        style="@style/ButtonBlue"
        android:layout_width="163dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:text="@string/reset_password_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />


</androidx.constraintlayout.widget.ConstraintLayout>